# fswatch

./: .gitignore  CMakeLists.txt
cmake/Modules/: LibfswatchChecks.cmake
libfswatch/: CMakeLists.txt  libfswatch_config.h.in
